2008-05-15	Joel Sherrill <joel.sherrill@OARcorp.com>

	* bootcard.c: Add capability for bootcard.c BSP Initialization
	Framework to ask the BSP where it has memory for the RTEMS Workspace
	and C Program Heap. These collectively are referred to as work area.
	If the BSP supports this, then it does not have to include code to
	split the available memory between the two areas. This reduces the
	amount of code in the BSP specific bspstart.c file. Additionally, the
	shared framework can initialize the C Library, call
	rtems_debug_enable(), and dirty the work area memory. Until most/all
	BSPs support this new capability, if the BSP supports this, it should
	call RTEMS_BSP_BOOTCARD_HANDLES_RAM_ALLOCATION from its configure.ac.
	When the transition is complete, this autoconf macro can be removed.
	* bsppretaskinghook.c: New file.

2008-05-12	Joel Sherrill <joel.sherrill@OARcorp.com>

	* bootcard.c: Refactored and renamed initialization routines to
	rtems_initialize_data_structures, rtems_initialize_before_drivers,
	rtems_initialize_device_drivers, and
	rtems_initialize_start_multitasking. This opened the sequence up so
	that bootcard() could provide a more robust and flexible framework
	which is easier to explain and understand. This also lays the
	groundwork for sharing the division of available memory between the
	RTEMS workspace and heap and the C library initialization across all
	BSPs.

2008-05-06	Joel Sherrill <joel.sherrill@OARcorp.com>

	* bootcard.c: Improve formatting and comments.

2008-03-20	Till Straumann <strauman@slac.stanford.edu>

	* vmeUniverse/vmeTsi148.c: type of 5th argument 
	to pci_read_config_dword() is now uint32_t*.

2008-03-17	Till Straumann <strauman@slac.stanford.edu>

	* vmeUniverse/vmeTsi148.c: Initialize VME Master
	'VTON' timer and bus-release policy to less aggressive
	values than the chip's defaults. The default VTON easily
	overrides any settings used by the DMA engine.

2008-03-03	Joel Sherrill <joel.sherrill@OARcorp.com>
